[package]
name = "blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
rand = "0.10.0"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
ed25519-dalek = "2.2.0"
sha2 = "0.10.9"
rocksdb = "0.22.0"
clap = { version = "4.5.39", features = ["derive"] }
bincode = "1.3.3"
bip39 = { version = "2.1.0", features = ["rand"] }
